Se corrigieron los errores de codigo